2009-03-02  Daniel Leidert <daniel.leidert@wgdd.de>

	* doc/babel.1, doc/obchiral.1, doc/obconformer.1, doc/obenergy.1,
	doc/obfit.1, doc/obgen.1, doc/obgrep.1, doc/obminimize.1,
	doc/obprobe.1, doc/obprop.1, doc/obrotamer.1, doc/obrotate.1,
	doc/roundtrip.1: Prevent hyphenation of URLs. Fixed an mdoc issue.

2009-03-02  Daniel Leidert <daniel.leidert@wgdd.de>

	* src/formats/smilesformat.cpp: Correct use of sprintf().
	http://lists.debian.org/debian-devel/2008/12/msg01079.html

2009-02-05  Chris Morley
		
	* include/openbabel/bond.h: Added parameter to SetInRing to allow
	it to be unset. (No other public way to do this.)
	
	* src/mol.cpp:(EndModify): Clear all OBBond (OB_RING_BOND)flags to
	fix bug #2568349 	
	(operator=): Copied flags OB_TCHARGE_MOL, OB_TSPIN_MOL and
	OB_PATTERN_STRUCTURE manually because all flags are cleared.
	
2009-01-30  Chris Morley

	* src/formats/chemkinformat.cpp: Move initialization into a
	separate function Init()
	
	Change option -al to -aL (Reactions have labels) to avoid conflict
	with other formats
	
	* src/formats/xml/cmlformat.cpp: Correct floatg error in CML1 output.
	Added generic WriteScalarProperties()
	Output molecular spinMultiplicity as a property, not an attribute.
	On outputing a property, if the title has a namespace use dictRef
	rather than title.
	Output (non-zero) energy from OBMOl::GetEnergy as a property in kJ/mol
	Output a negative vibrational frequency as imaginaryFrequency
		 
	* src/formats/xml/cmlreactformat.cpp: Ensure OBText strings go to
	the original output stream. (Stream may change to output moleculeList
	first.)
	Add reversible attribute on reactions.

2009-01-19  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/format.h (OpenBabel): Fix PR#2070342. Make
	sure format modules properly inherit GetMIMEType(). Breaks library
	ABI, which is fine for v2.3.

2008-12-13  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/outformat.cpp: New format to read files with